--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,22 @@
+*, *::before, *::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+body{
+  box-sizing: border-box;
+}
+
 .container{
   width: min(1150px, 90%);
+}
+
+a{
+  text-decoration: none;
+  color: #000;
+}
+
+p, a, h1, h2, h3{
+  font-family: "Roboto", sans-serif;
 }
